fix to portfolio filter on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -1327,6 +1327,7 @@ textarea {
 
 .portfolio__filter {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin-bottom: 50px;
 }
