--- a/sass/layouts/__portfolio.scss
+++ b/sass/layouts/__portfolio.scss
@@ -8,6 +8,7 @@
 
 .portfolio__filter {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 50px;
 }
